Some minor improvments

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 			Device Unsupported
 		</canvas>
 		<script>
-			var g = new Game("GLCanvas");
+			var g = new Game("GLCanvas", 60);
 
-			g.update = function() { }
+			g.update = function(dt) { }
 			g.draw = function() { }
 
 			g.start();
 		</script>
 	</body>
 </html>
-
-
