Remove a waste of time and energy

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			Device Unsupported
 		</canvas>
 		<script>
-			var g = new Game("GLCanvas", 60);
+			var g = new Game("GLCanvas");
 
 			g.update = function(dt) { }
 			g.draw = function() { }
