--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>TidePodChan</title>
+		<script type="text/javascript" src="src/gl-matrix.js"></script>
 		<script type="text/javascript" src="src/lib.js"></script>
 		<meta charset="UTF-8">
 	</head>
