--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>TidePodChan</title>
 		<script type="text/javascript" src="src/gl-matrix.js"></script>
 		<script type="text/javascript" src="src/lib.js"></script>
+		<script type="text/javascript" src="src/simple.js"></script>
 		<meta charset="UTF-8">
 	</head>
 	<body>
