Implement a basic test game

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<script type="text/javascript" src="src/gl-matrix.js"></script>
 		<script type="text/javascript" src="src/lib.js"></script>
 		<script type="text/javascript" src="src/simple.js"></script>
+		<script type="text/javascript" src="src/mp1.js"></script>
 		<meta charset="UTF-8">
 	</head>
 	<body>
@@ -12,11 +13,7 @@
 			Device Unsupported
 		</canvas>
 		<script>
-			var g = new Game("GLCanvas");
-
-			g.update = function(dt) { }
-			g.draw = function() { }
-
+			var g = new MP1("GLCanvas");
 			g.start();
 		</script>
 	</body>
