Revise main loop to satify reqs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<b>Time to update/draw: </b><span id="elapsed"></span> ms<br>
 		<b>Frames per second: </b><span id="fps"></span> fps<br>
-		<b>Updates per draw: </b>1<br>
+		<b>Updates per draw: </b><span id="updates"></span><br>
 		<b>Lag time: </b><span id="lag-time"></span> ms<br>
 		<hr>
 		<b>Total object count: </b><span id="objs"></span><br>
