Restructure Code Repo

--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TidePodChan</title>
-		<script type="text/javascript" src="src/gl-matrix.js"></script>
-		<script type="text/javascript" src="src/lib.js"></script>
-		<script type="text/javascript" src="src/simple.js"></script>
-		<script type="text/javascript" src="src/mp1.js"></script>
+		<title>TidePodChan Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<canvas id="GLCanvas" width=640 height=480>
-			Device Unsupported
-		</canvas>
-		<br>
-		<b>Time to update/draw: </b><span id="elapsed"></span> ms<br>
-		<b>Frames per second: </b><span id="fps"></span> fps<br>
-		<b>Updates per draw: </b><span id="updates"></span><br>
-		<b>Lag time: </b><span id="lag-time"></span> ms<br>
-		<hr>
-		<b>Total object count: </b><span id="objs"></span><br>
-		<b>Delete mode: </b><span id="delete-mode"></span>
-		<script>
-			var g = new MP1("GLCanvas");
-			g.start();
-		</script>
+		<a href="mp1.html">MP1</a>
 	</body>
 </html>
