Misc Style Changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<img src="mascot.jpg" alt="Our Glorious Mascot"><br>
 		<a href="mp1.html">MP1</a>
 	</body>
 </html>
