--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	</head>
 	<body>
 		<img src="mascot.jpg" alt="Our Glorious Mascot"><br>
+		<hr>
 		<a href="mp1.html">MP1</a>
+		<a href="mp2.html">MP2</a>
 	</body>
 </html>
