--- a/mp1.html
+++ b/mp1.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="src/engine/lib.js"></script>
 		<script type="text/javascript" src="src/engine/simple.js"></script>
 		<script type="text/javascript" src="src/mp1.js"></script>
+		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
