--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<img src="mascot.jpg" alt="Our Glorious Mascot"><br>
+		<img src="assets/mascot.jpg" alt="Our Glorious Mascot"><br>
 		<hr>
 		<a href="mp1.html">MP1</a>
 		<a href="mp2.html">MP2</a>
