--- a/mp3.html
+++ b/mp3.html
@@ -4,14 +4,14 @@
 		<title>MP3 - TidePodChan</title>
 		<script type="text/javascript" src="src/engine/gl-matrix.js"></script>
 		<script type="text/javascript" src="src/engine/lib.js"></script>
-		<script type="text/javascript" src="src/engine/simple.js"></script>
+		<script type="text/javascript" src="src/engine/texture.js"></script>
 		<script type="text/javascript" src="src/mp3.js"></script>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<canvas id="GLCanvas" width=640 height=480>
+		<canvas id="GLCanvas" width=800 height=600>
 			Device Unsupported
 		</canvas>
 		<script>
