--- a/mp3.html
+++ b/mp3.html
@@ -4,6 +4,7 @@
 		<title>MP3 - TidePodChan</title>
 		<script type="text/javascript" src="src/engine/gl-matrix.js"></script>
 		<script type="text/javascript" src="src/engine/lib.js"></script>
+		<script type="text/javascript" src="src/engine/simple.js"></script>
 		<script type="text/javascript" src="src/engine/texture.js"></script>
 		<script type="text/javascript" src="src/mp3.js"></script>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
