Add C-V controls. Make some other changes and clean-ups

--- a/mp3extra.html
+++ b/mp3extra.html
@@ -11,7 +11,8 @@
 		<ul>
 			<li>The animation view maintains the correct aspect ratio</li>
 			<li>The <b>Shift</b> key slows actions to 10%</li>
-			<li>The <b>Z</b> and <b>X</b> keys increase the gap between frames</li>
+			<li>The <b>Z</b> and <b>X</b> keys change the gap between frames</li>
+			<li>The <b>C</b> and <b>V</b> keys change the frame update time</li>
 		</ul>
 		<hr>
 		<a href="index.html">Home</a>
