--- a/mp3.html
+++ b/mp3.html
@@ -18,7 +18,11 @@
 		<script>
 			var g = new MP3("GLCanvas");
 			g.start();
-		</script>
+		</script><br>
+		<b>Bound Position: (</b><i>x</i> = <span id="bposx"></span>, <i>y</i> = <span id="bposy"></span><b>)</b><br>
+		<b>Bound Size: (</b><i>width</i> = <span id="bsizew"></span>, <i>height</i> = <span id="bsizeh"></span><b>)</b><br>
+		<b>Frame:</b> <span id="frame"></span>/<span id="framec"></span><br>
+		<b>Frame Time:</b> <span id="ftime"></span>
 		<hr>
 		<a href="index.html">Home</a>
 		<a href="mp3extra.html">Additional Features</a>
