--- a/mp3extra.html
+++ b/mp3extra.html
@@ -9,10 +9,12 @@
 	<body>
 		<b>MP3</b> - Additional Features
 		<ul>
+			<li>The animation does <b>not</b> proceed to advance frames when not in Q-mode</li>
 			<li>The animation view maintains the correct aspect ratio</li>
 			<li>The <b>Shift</b> key slows actions to 10%</li>
 			<li>The <b>Z</b> and <b>X</b> keys change the gap between frames</li>
 			<li>The <b>C</b> and <b>V</b> keys change the frame update time</li>
+			<li>The status pane shows the current frame and frame delta time</li>
 		</ul>
 		<hr>
 		<a href="index.html">Home</a>
