--- a/mp1.html
+++ b/mp1.html
@@ -7,10 +7,12 @@
 		<script type="text/javascript" src="src/engine/simple.js"></script>
 		<script type="text/javascript" src="src/mp1.js"></script>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="assets/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<h1>MP1</h1>
 		<canvas id="GLCanvas" width=640 height=480>
 			Device Unsupported
 		</canvas>
