--- a/mp3.html
+++ b/mp3.html
@@ -8,10 +8,12 @@
 		<script type="text/javascript" src="src/engine/texture.js"></script>
 		<script type="text/javascript" src="src/mp3.js"></script>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="assets/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<h1>MP3</h1>
 		<canvas id="GLCanvas" width=800 height=600>
 			Device Unsupported
 		</canvas>
