--- a/mp3extra.html
+++ b/mp3extra.html
@@ -3,11 +3,12 @@
 	<head>
 		<title>MP3 - Additional Features</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="assets/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<b>MP3</b> - Additional Features
+		<h1>MP3 - Additional Features</h1>
 		<ul>
 			<li>The animation does <b>not</b> proceed to advance frames when not in Q-mode</li>
 			<li>The animation view maintains the correct aspect ratio</li>
@@ -15,6 +16,7 @@
 			<li>The <b>Z</b> and <b>X</b> keys change the gap between frames</li>
 			<li>The <b>C</b> and <b>V</b> keys change the frame update time</li>
 			<li>The status pane shows the current frame and frame delta time</li>
+			<li>CSS styles!</li>
 		</ul>
 		<hr>
 		<a href="index.html">Home</a>
