Highlight the currently viewed frame when in Q mode

--- a/mp3.html
+++ b/mp3.html
@@ -27,6 +27,6 @@
 		<b>Frame Time:</b> <span id="ftime"></span>
 		<hr>
 		<a href="index.html">Home</a>
-		<a href="mp3extra.html">Additional Features</a>
+		<a href="mp3extra.html">Extras</a>
 	</body>
 </html>
