--- a/mp3extra.html
+++ b/mp3extra.html
@@ -16,6 +16,7 @@
 			<li>The <b>Z</b> and <b>X</b> keys change the gap between frames</li>
 			<li>The <b>C</b> and <b>V</b> keys change the frame update time</li>
 			<li>The status pane shows the current frame and frame delta time</li>
+			<li>The current frame is highlighted in the main view</li>
 			<li>CSS styles!</li>
 		</ul>
 		<hr>
