Add boilerplate for MP4

--- a/mp4extra.html
+++ b/mp4extra.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TidePodChan Home</title>
+		<title>MP4 - Additional Features</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="assets/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<img src="assets/mascot.jpg" alt="Our Glorious Mascot"><br>
+		<h1>MP4 - Additional Features</h1>
+		<ul>
+			<li>TODO</li>
+		</ul>
 		<hr>
-		<a href="mp1.html">MP1</a>
-		<a href="mp2.html">MP2</a>
-		<a href="mp3.html">MP3</a>
+		<a href="index.html">Home</a>
 		<a href="mp4.html">MP4</a>
 	</body>
 </html>
