--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<img src="assets/mascot.jpg" alt="Our Glorious Mascot"><br>
 		<hr>
+		<a href="https://github.com/muddmaker/TidePodChan">Source</a>
 		<a href="mp1.html">MP1</a>
 		<a href="mp2.html">MP2</a>
 		<a href="mp3.html">MP3</a>
