Begin wiring MP4 logic

--- a/mp4.html
+++ b/mp4.html
@@ -20,7 +20,10 @@
 		<script>
 			var g = new MP4("GLCanvas");
 			g.start();
-		</script>
+		</script><br>
+		<b>Dye Packs Spawned: </b><span id="dye-packs">0</span><br>
+		<b>Patrol Units Spawned: </b><span id="patrols">0</span><br>
+		<b>Auto Spawn Mode: </b><span id="auto-spawn">false</span>
 		<hr>
 		<a href="index.html">Home</a>
 		<a href="mp4extra.html">Extras</a>
