We have already lost

--- a/mp4.html
+++ b/mp4.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="src/engine/lib.js"></script>
 		<script type="text/javascript" src="src/engine/simple.js"></script>
 		<script type="text/javascript" src="src/engine/texture.js"></script>
+		<script type="text/javascript" src="src/engine/texobj.js"></script>
 		<script type="text/javascript" src="src/mp4.js"></script>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="assets/style.css">
