Finish the project

--- a/mp4extra.html
+++ b/mp4extra.html
@@ -10,7 +10,10 @@
 	<body>
 		<h1>MP4 - Additional Features</h1>
 		<ul>
-			<li>TODO</li>
+			<li>CSS Themes, Different Page, Favicon, etc. from last time</li>
+			<li>Ships turn red instead of blue</li>
+			<li>Aspect ratios of smaller cameras has been improved</li>
+			<li>Smaller cameras can display the full objects they focus on</li>
 		</ul>
 		<hr>
 		<a href="index.html">Home</a>
